# redshift

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  colorramp.cpp  colorramp.h  config-ini.c  gamma-drm.c  gamma-dummy.c  gamma-quartz.c  gamma-randr.c  gamma-vidmode.c  gamma-w32gdi.c  location-geoclue2.c  location-geoclue2.h  location-manual.c  location-manual.cpp  location-manual.h  location-provider-impl.cpp  options.c  options.cpp  options.h  redshift.c  redshift.cpp  redshift.h  solar.cpp  solar.hpp  systemtime.cpp  systemtime.hpp
src/include/yellowstone/: colorramp.hpp  config-ini.h  location-provider-impl.hpp  location-provider.hpp  options.hpp  solar.hpp  systemtime.hpp
